2006-01-27  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-activation.c: (ephy_activation_load_url),
	(ephy_activation_load_session),
	(ephy_activation_open_bookmarks_editor):
	* src/ephy-activation.h:

	Add required GError** params, and actually set the
	error when returning FALSE.

2006-01-27  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (main):

	Disable pango rendering by default, unless MOZ_ENABLE_PANGO env
	var is set. Bug #328844.

2006-01-26  Crispin Flowerday  <gnome@flowerday.cx>

	* src/Makefile.am:

	Use stamp files for the dbus bindings.h files
	
2006-01-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-shell.c: (impl_get_embed_single):

	Fix initial network status sync.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):

	Add transient window to window group.,

	* src/languages.h:

	Add licence header.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-net-monitor.c: (ephy_net_monitor_set_net_status),
	(notify_network_managed_cb):

	Store the detected network status even if we're not active.

2006-01-25  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* data/epiphany.schemas.in:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	* lib/ephy-prefs.h:
	* src/Makefile.am:
	* src/ephy-net-monitor.c:
	* src/ephy-net-monitor.h:
	* src/ephy-shell.c: (ephy_shell_sync_network_status),
	(impl_get_embed_single), (ephy_shell_dispose),
	(ephy_shell_get_net_monitor), (_ephy_shell_create_instance),
	(_ephy_shell_startup):
	* src/ephy-shell.h:

	libnm-glib be-gone! Use NetworkManager directly via DBUS, by
	importing the excellent net-monitor extension directly into
	Epiphany. Code by Jean-François Rameau.

2006-01-22  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmarks-ui.c
	
	Reverted change which made 'add bookmark' and 'edit bookmark'
	use-cases have exactly the same dialog.
