@@ -1,5 +1,15 @@
 2006-01-27  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus_cb),
+	(ephy_dbus_connect_to_system_bus_cb), (session_filter_func),
+	(system_filter_func), (ephy_dbus_connect_to_system_bus),
+	(ephy_dbus_connect_to_session_bus), (ephy_dbus_shutdown):
+	* src/ephy-dbus.h:
+
+	Remove unused NM code. Misc cleanups.
+
+2006-01-27  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-activation.c: (ephy_activation_load_url),
 	(ephy_activation_load_session),
 	(ephy_activation_open_bookmarks_editor):
